<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81C784"
    android:orientation="vertical"
    tools:context=".View.NuevoPacienteActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="Nuevo Paciente"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nombre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/nombre"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_apellido"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/apellido"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dni"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/dni"
                app:hintTextColor="#9E9E9E"
                app:startIconDrawable="@drawable/ic_identity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:text="@string/sexo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:checkedButton="@+id/rb_masculino"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_masculino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/gray"
                    android:text="Masculino" />

                <RadioButton
                    android:id="@+id/rb_femenino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/gray"
                    android:text="Femenino" />

                <RadioButton
                    android:id="@+id/rb_otro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/gray"
                    android:text="Otro" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fecha_nacimiento"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/fechaNacimiento"
                app:startIconDrawable="@drawable/ic_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fecha_nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_localidad"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/localidad"
                app:startIconDrawable="@drawable/ic_place">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_localidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nuevo_usuario"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/usuario"
                app:startIconDrawable="@drawable/ic_account_circle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nuevo_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nueva_contraseña"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/contraseña"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nueva_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:text="@string/tipoTratamiento"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_tipo_tratamiento"
                style="@android:style/Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_guardar_paciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#1B5E20"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_save"
                    android:text="Guardar" />

                <Button
                    android:id="@+id/btn_cancelar_paciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#B71C1C"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_cancel"
                    android:text="Cancelar" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>